更改了项目名

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "marathon",
+  "name": "ionic-seed",
   "description": "Start a new ionic project",
   "varsion": "1.0.0",
   "scripts": {
