--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "marathon",
+  "name": "ionic-seed",
   "description": "Start a new ionic project",
   "homepage": "https://github.com/cauu/ionic-marathon",
   "authors": [
